# vigir_manipulation_planning

./: CMakeLists.txt  README.md  package.xml
vigir_drake_cpp/: CMakeLists.txt  package.xml
vigir_drake_cpp/include/vigir_drake_cpp/: drake_planner.h
vigir_drake_cpp/include/vigir_drake_cpp/planner_modules/: cartesian_trajectory_planner_module.h  planner_module.h  position_ik_planner_module.h  trajectory_planner_module.h
vigir_drake_cpp/src/: drake_planner.cpp  drake_planner_node.cpp
vigir_drake_cpp/src/planner_modules/: cartesian_trajectory_planner_module.cpp  planner_module.cpp  position_ik_planner_module.cpp  trajectory_planner_module.cpp
vigir_drake_launch/: CMakeLists.txt  package.xml
vigir_drake_launch/launch/: .gitignore  atlas_drake_matlab.launch  atlas_drake_matlab_gui.launch  thor_drake_matlab_gui.launch  vigir_drake_cpp.launch  vigir_drake_matlab.launch  vigir_drake_matlab_gui.launch
vigir_drake_matlab/: CMakeLists.txt  package.xml
vigir_drake_matlab/include/vigir_drake_matlab/: drake_bridge.h
vigir_drake_matlab/scripts/: drake_matlab_node.py
vigir_drake_matlab/src/: drake_bridge.cpp  drake_bridge_node.cpp
vigir_drake_matlab/src/matlab/: DrakeInverseKinematicsInterface.m  buildCartesianOptimizationConstraints.m  buildIKCartesianTrajectoryConstraints.m  buildIKConstraints.m  buildIKTrajectoryConstraints.m  calcIKCartesianTrajectory.m  calcIKPosture.m  calcIKTrajectory.m  drakeTest.m  drake_viewer.out  initIKCartesianTrajectoryOptions.m  initIKOptions.m  initIKTrajectoryOptions.m  startNode.m
vigir_drake_matlab/src/matlab/ThorDRCQualificationFootstepTest/: DrakeInverseKinematicsInterface.m  DrakeInverseKinematicsInterfaceBackup2.m  README  buildIKCartesianFeetTrajectoryConstraints.m  calcIKCartesianFeetTrajectory.m  setRelativeTargetPosition.m  walk_pattern_in_place.m  walk_pattern_move_com_back.m  walk_pattern_step_over.m  walk_pattern_step_shift.m  walk_pattern_step_up.m
vigir_drake_matlab/src/matlab/helper/: check_traj_values.m  (+9 more)
vigir_drake_rosmatlab_updater/: CMakeLists.txt  package.xml
vigir_lidar_octomap_updater/: CMakeLists.txt  README.md  lidar_octomap_updater_plugin_description.xml  package.xml
vigir_lidar_octomap_updater/cfg/: LidarOctomapUpdater.cfg
vigir_lidar_octomap_updater/include/vigir_lidar_octomap_updater/: lidar_octomap_updater.h
vigir_lidar_octomap_updater/src/: lidar_octomap_updater.cpp  plugin_init.cpp
vigir_lidar_octomap_updater/vigir_lidar_octomap_updater/: CMakeLists.txt
vigir_manipulation_controller/: CMakeLists.txt  package.xml
vigir_manipulation_controller/include/vigir_manipulation_controller/: vigir_manipulation_controller.h
vigir_manipulation_controller/launch/: l_robotiq_handle.launch  l_robotiq_manipulation_control.launch  l_robotiq_tf.yaml  l_stump_manipulation_control.launch  l_stump_tf.yaml  l_vt_hand_manipulation_control.launch  r_robotiq_handle.launch  r_robotiq_manipulation_control.launch  r_robotiq_tf.yaml  r_stump_handle.launch  r_stump_manipulation_control.launch  r_stump_tf.yaml  r_vt_hand_manipulation_control.launch
vigir_manipulation_controller/src/: vigir_manipulation_controller.cpp
vigir_move_group/: CMakeLists.txt  package.xml  vigir_move_group_capabilities_plugin_description.xml
vigir_move_group/include/vigir_move_group/: continuous_replanning_capability.h  manipulation_action_capability.h  octomap_access_capability.h  octomap_management_capability.h  robot_state_retrieval_capability.h
vigir_move_group/src/: continuous_replanning_capability.cpp  manipulation_action_capability.cpp  manipulation_action_capability.cpp.autosave  octomap_access_capability.cpp  octomap_management_capability.cpp  robot_state_retrieval_capability.cpp
vigir_move_group/src/helper/: drake_planning_helper.cpp
vigir_moveit_rviz_ui/: CMakeLists.txt  package.xml  vigir_motion_planning_rviz_plugin_description.xml
vigir_moveit_rviz_ui/vigir_motion_planning_rviz_plugin/: CMakeLists.txt
vigir_moveit_rviz_ui/vigir_motion_planning_rviz_plugin/cart_traj_examples/: multi_eef_difficulties_atlas.xml  multi_eef_test_atlas.xml  triangle_test.xml  triangle_test_thor.xml
vigir_moveit_rviz_ui/vigir_motion_planning_rviz_plugin/src/: manual_cartesian_trajectory_dialog.cpp  motion_planning_display.cpp  motion_planning_frame.cpp  motion_planning_frame_cartesian_trajectory.cpp  motion_planning_frame_context.cpp  motion_planning_frame_manipulation.cpp  motion_planning_frame_objects.cpp  motion_planning_frame_planning.cpp  motion_planning_frame_scenes.cpp  motion_planning_frame_states.cpp  plugin_init.cpp
vigir_moveit_utils/: CMakeLists.txt  package.xml
vigir_moveit_utils/include/vigir_moveit_utils/: collision_utils.h  constrained_motion_utils.h  group_utils.h  joint_constraint_utils.h  planning_scene_utils.h  robot_model_utils.h  trajectory_utils.h
vigir_ocs_planning_manager/: CMakeLists.txt  package.xml
vigir_ocs_planning_manager/include/vigir_ocs_planning_manager/: inv_reach_manager.h
vigir_ocs_planning_manager/launch/: ocs_planning_manager.launch
vigir_ocs_planning_manager/src/: ocs_planning_manager_node.cpp
vigir_ocs_robot_model/: CMakeLists.txt  package.xml
vigir_ocs_robot_model/include/vigir_ocs_robot_model/: moveit_ocs_model.h  moveit_ocs_model_ros.h
vigir_ocs_robot_model/rviz/: demo.rviz
vigir_ocs_robot_model/src/: moveit_ocs_model.cpp  moveit_ocs_model_ros.cpp
vigir_plan_execution/: CMakeLists.txt  package.xml
vigir_plan_execution/include/vigir_plan_execution/: continuous_plan_execution.h
vigir_plan_execution/src/: continuous_plan_execution.cpp
vigir_plan_to_action/: CMakeLists.txt  package.xml
vigir_plan_to_action/launch/: test_planning.launch
vigir_plan_to_action/src/: plan_to_action_node.cpp
vigir_planning_interface/: CMakeLists.txt  package.xml  setup.py
vigir_planning_interface/move_group_interface/: CMakeLists.txt
vigir_planning_interface/robot_interface/src/: wrap_python_robot_interface.cpp
vigir_planning_interface/vigir_move_group_interface/: CMakeLists.txt
vigir_planning_interface/vigir_move_group_interface/src/: move_group.cpp  wrap_python_move_group.cpp
(+39 files in other folders)
