<?xml version="1.0"?>
<package>
  <name>vigir_drake_launch</name>
  <version>0.0.0</version>
  <description>The vigir_drake_launch package</description>

  <maintainer email="steinachim@gmx.de">Achim Stein</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>