<?xml version="1.0"?>
<package>
  <name>vigir_drake_matlab</name>
  <version>0.1.0</version>
  <description>Planner and bridge to access Drake IK planning from ROS</description>
  <maintainer email="steinachim@gmx.de">Achim Stein</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>vigir_planning_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>vigir_planning_msgs</run_depend>
</package>
