<?xml version="1.0"?>
<package>
  <name>vigir_lidar_octomap_updater</name>
  <version>0.0.0</version>
  <description>The vigir_lidar_octomap_updater package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kohlbrecher@todo.todo">kohlbrecher</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>
<!--  -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>laser_geometry</build_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>laser_geometry</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <moveit_ros_perception plugin="${prefix}/lidar_octomap_updater_plugin_description.xml"/>
  </export>
</package>
