<?xml version="1.0"?>
<package>
  <name>vigir_move_group</name>
  <version>0.0.0</version>
  <description>The vigir_move_group package</description>

  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>



  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_move_group</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>vigir_plan_execution</build_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>vigir_plan_execution</run_depend>

  <export>
    <moveit_ros_move_group plugin="${prefix}/vigir_move_group_capabilities_plugin_description.xml"/>
  </export>
</package>
