<?xml version="1.0"?>
<package>
  <name>vigir_moveit_utils</name>
  <version>0.0.0</version>
  <description>The vigir_moveit_utils package provides tools for use with MoveIt! planning</description>

  <maintainer email="kohlbrecher@todo.todo">kohlbrecher</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
  
</package>
