<?xml version="1.0"?>
<package>
  <name>vigir_ocs_planning_manager</name>
  <version>0.0.0</version>
  <description>vigir_ocs_planning_manager</description>

  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <!--<build_depend>vigir_utilities</build_depend>-->
  <build_depend>flor_planning_msgs</build_depend>
  <!--<build_depend>flor_ocs_msgs</build_depend>-->
  <!-- <build_depend>simox_inv_reach_ros</build_depend> -->

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>flor_planning_msgs</run_depend>
  <!-- <run_depend>simox_inv_reach_ros</run_depend> -->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
