<?xml version="1.0"?>
<package>
  <name>vigir_ocs_robot_model</name>
  <version>0.0.0</version>
  <description>The vigir_ocs_robot_model package</description>

  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>vigir_utilities</build_depend>
  <build_depend>vigir_teleop_planning_msgs</build_depend>
  <build_depend>vigir_planning_msgs</build_depend>
  <build_depend>vigir_moveit_utils</build_depend>
  <build_depend>vigir_ocs_msgs</build_depend>  
  <build_depend>flor_visualization_utils</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>vigir_utilities</run_depend>
  <run_depend>vigir_teleop_planning_msgs</run_depend>
  <run_depend>vigir_planning_msgs</run_depend>
  <run_depend>vigir_moveit_utils</run_depend>
  <run_depend>vigir_ocs_msgs</run_depend>  
  <run_depend>flor_visualization_utils</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
